# TIF

./: .gitignore  README.md
Books/EffectivePython/Chapter8/: BetterWay72.md
Books/시작하세요_도커_쿠버네티스/: 7.2_Configmap_Secret_설정값을_파드에_전달.md  8.1_인그레스를_사용하는_이유.md  8.2_인그레스의_구조.md  8.3_인그레스의_세부_기능_annotation을_이용한_설정.md
Django/Database/: indexes.md
Django/Model/: custom_validators.md  django_fk_caching.md  jsonfield_validation.md
Django/Problems/: test.md
Django/Problems/test_user_management/: .env.example  README.md  pyproject.toml
Docker/Books/시작하세요_도커_쿠버네티스/: 7.1_네임스페이스_리소스를_논리적으로_구분하는_장벽.md
FastAPI/Docs/FastAPITestCodes/: README.md  main.py  pyproject.toml
FastAPI/fastapi-auth-test-with-redis/: main.py  pyproject.toml
FastAPI/fastapi-auth-test-with-redis/src/: main.py
Go/GoV1/: go.mod
Go/GoV1/ch02/: go.mod  hello_world.go
Go/GoV1/ch03/: go.mod
Java/Annotations/: 01_basics.md  02_spring_core.md  03_spring_web.md  04_spring_data.md  05_custom.md  cheat_sheet.md
Kubernetes/MakeMySelf/: main.py  pyproject.toml
Kubernetes/SkillitTest/: frontend-rs.yaml  nginx-deployment.yaml  nginx-pod.yaml
LLM/: FeynmanTechnique.md
LLM/RAG/Books/테디노트의_랭체인을_활용한_RAG_비법노트_기본편/RagNoteSourceCode/: README.md  pyproject.toml
LLM/RAG/Projects/PDFQnA/: main.py  pyproject.toml
Python/EffectivePython/: pyproject.toml
Python/Libraries/: README.md
Python/SampleCodes/: main.py  pyproject.toml
Python/TestCode/: README.md  assertIn&assertDictEqual.md
Redis/: cheat_sheet.md
Redis/Basics/: lua_scripts_and_eval.md
Redis/Patterns/: redis_streams.md  saga_pattern.md
(+147 files in other folders)
