[tool.poetry]
name = "ragnotesourcecode"
version = "0.1.0"
description = ""
authors = ["Lee Yuntae <akor1@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^25.1.0"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
